tester/testsuite/extensions/functions/bad/bad002.jl
int main() {
  boolean x = true;
  fn(int) -> int addX() {
    return \(int y) -> int: y + x;
  }
  printInt(addX()(2));
  return 0;
}
